--- a/account/templates/jobseeker/get_jobs.html
+++ b/account/templates/jobseeker/get_jobs.html
@@ -1,4 +1,6 @@
-{% load static %} {% include 'jobseeker/base.html' %} {% block content %}
+{% load static %}
+{% include 'jobseeker/base.html' %}
+{% block content %}
 <div class="container mx-auto p-4 mt-20">
   <h1 class="text-2xl font-bold text-center mb-6">Available Jobs</h1>
 
