--- a/employer/templates/employer/dashboard.html
+++ b/employer/templates/employer/dashboard.html
@@ -3,7 +3,7 @@
   Dashboard | Globpath
 {% endblock %}
 {% block content %}
-<div class="container mx-auto px-4 mt-">
+<div class="container mx-auto px-4 mt-40">
   <!-- Main container for the dashboard -->
   <div class="flex flex-row min-h-screen gap-5">
     <!-- Sidebar for larger screens -->
